# ComfyClaw

./: .gitattributes  .gitignore  CLONE_TEST.md  ComfyClaw_Explaination.md  ComfyClaw_Explanation.md  README.md  __init__.py  pyproject.toml  requirements.txt
ComfyClaw-Agent/: RESTRICTED_COMMANDS.md  SOUL.md  TOOLS.json  USER.md  VARS.json
ComfyClaw-Agent/Workspace/: ToDo_List.md
ComfyClaw-Agent/logs/: .gitkeep
ComfyClaw-Agent/prompts/: PmptHeatbeat.md  PmptImportance.md  PmptInjEval.md  PmptLTMCreation.md  PmptLTMSaveEval.md  PmptLTMSummaryEdit.md  PmptMain.md  PmptSTMCreation.md  PmptSecurity.md  PmptToolSuggestion.md
ComfyClaw-Chat/: chat_service.py  chat_settings.json  run_chat_service.bat
ComfyClaw-Nodes/: .gitignore  A_List_Of_ComfyClaw_Node_Operations.md  LICENSE  README.md  __init__.py  any_to_something.py  boolean_output_switch.py  chunk_splitter.py  common.py  embedding.py  embedding_bundle_to_json.py  embedding_query.py  embedding_query_to_json.py  escaped_json_to_string.py  exec_node.py  file_read.py  file_write.py  has_changed.py  json_append.py  json_cleaner.py  json_count_keys.py  json_edit.py  json_find_first_last.py  json_insert_key.py  json_mass_common.py  json_mass_math.py  json_mass_math_keys.py  json_mass_remove.py  json_read.py  json_remove_entry.py  json_tally_found_keys.py  json_to_markdown.py  json_to_outputs.py  json_to_yaml.py  llm_api_loader.py  llm_call.py  llm_model_loader.py  load_embedding_api.py  load_embedding_model.py  markdown_json_common.py  (+30 more)
ComfyClaw-Nodes/docs/: ComfyClaw_Node_Operations_Simple.md  ComfyClaw_Node_RAG.md  ComfyClaw_Workflow_Patterns_RAG.md
ComfyClaw-Nodes/example_workflow/: ClawAgent1-10.json
ComfyClaw-Nodes/web/: comfyclaw_dynamic_inputs.js  json_to_outputs.js  preview_any_as_text.js  timer_node.js
ComfyClaw-Tools/: README.md  TOOLS.md  browser_server.py  ragquerydoc_settings.txt  requirements.txt  run_tool.py  settings.json  setup.bat  test_gui.py  tool_settings.py
ComfyClaw-Tools/tools/: browser.py  fetch.py  file.py  file_read.py  file_write.py  html.py  mcp.py  pdf.py  ragquerydoc.py  search.py
