[project]
name = "comfyclaw"
description = "ComfyUI custom nodes and prototype harness pieces for building transparent agent workflows."
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "PyAutoGUI>=0.9.54",
    "PyYAML>=6.0",
    "numpy>=1.24",
    "pytesseract>=0.3.10",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/Steven-Hammon/ComfyClaw"
Documentation = "https://github.com/Steven-Hammon/ComfyClaw#readme"
"Bug Tracker" = "https://github.com/Steven-Hammon/ComfyClaw/issues"

[tool.comfy]
PublisherId = "steven-hammon"
DisplayName = "ComfyClaw"
